--- a/data/simple_report.html
+++ b/data/simple_report.html
@@ -1,16 +1,30 @@
 <html>
-<head></head>
+<head>
+  <style>
+  body {
+    font-family: 'Droid Sans';
+    font-size: 1.2em;
+    margin-left: 2em;
+    margin-top: 2em;
+  }
+
+  table {
+    padding: 2px;
+  }
+  </style>
+</head>
 <body>
   <p>
   Number of functions in total: $f_number
   </p>
   <p>
     <table>
-      <tr>
+      <tr class='head'>
         <th>Function name</th>
         <th>Instructions</th>
         <th>Blocks</th>
         <th>Function calls</th>
+        <th>XREFS</th>
       </tr>
       $f_table
     </table>
