--- a/data/functions_report.html
+++ b/data/functions_report.html
@@ -1,61 +1,61 @@
 <html>
 <head>
   <style>
-  body {
+  body {{
     font-family: 'Droid Sans Mono';
     font-size: 1em;
     margin-left: 2em;
     margin-top: 2em;
-  }
+  }}
 
-  .function_table {
+  .function_table {{
     border: 1px solid black;
     border-spacing:0;
     border-collapse: collapse;
-  }
+  }}
 
-  .function_table thead th {
+  .function_table thead th {{
     background-color: #d7e0ef;
     border: solid 1px #d7e0ef;
     color: black;
     padding: 10px;
     text-align: center;
     text-shadow: 1px 1px 1px #fff;
-  }
+  }}
 
-  .function_table tbody td {
+  .function_table tbody td {{
     border: solid 1px #d7e0ef;
     border-left: none;
     border-right: none;
     color: black;
     padding: 5px;
     text-align: center;
-  }
+  }}
 
-  .function_table tbody td:first-child {
+  .function_table tbody td:first-child {{
     text-align: left;
-  }
+  }}
 
-  .function_table tbody tr:hover {
+  .function_table tbody tr:hover {{
     background-color: #e6e6e6;
-  }
+  }}
 
-  .large {
+  .large {{
     border-left: 5px solid red;
-  }
+  }}
 
-  .medium {
+  .medium {{
     border-left: 5px solid orange;
-  }
+  }}
 
-  .small {
+  .small {{
     border-left: 5px solid green;
-  }
+  }}
   </style>
 </head>
 <body>
   <p>
-  Number of functions in total: $f_number
+  Number of functions in total: {f_number}
   </p>
   <p>
     <table  class="function_table">
@@ -69,7 +69,7 @@
         </tr>
       </thead>
       <tbody>
-        $f_table
+        {f_table}
       </tbody>
     </table>
   </p>
