Adding experimental functionality 'binary fingerprint'

--- a/data/functions_report.html
+++ b/data/functions_report.html
@@ -108,6 +108,31 @@
   .small {{
     border-left: 5px solid green;
   }}
+
+  .data_op {{
+    width: 20px;
+    background-color: #33ADFF;
+  }}
+
+  .fp_op {{
+    width: 20px;
+    background-color: #3A405A;
+  }}
+
+  .arthm_op {{
+    width: 20px;
+    background-color: #383D3B;
+  }}
+
+  .df_op {{
+    width: 20px;
+    background-color: #E3170A;
+  }}
+
+  .other_op {{
+    width: 20px;
+    background-color: #F9DEC9;
+  }}
   </style>
 </head>
 <body>
